syntax = "proto3";

package api.article.v1;
option go_package=".;v1";

service Article {
  rpc GetArticle (ArticleRequest) returns (ArticleReply);
}

message ArticleRequest {
  int64 id = 1;
}

message ArticleReply {
  int64 id = 1;
  string title = 2;
  string content = 3;
}